# result4

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml
data/: hh_vacancies.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_DataFile_py.html  z_145eef247bfb46b6_GetVacancies_py.html  z_145eef247bfb46b6_OperationsWithVacancies_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_data_file_py.html  z_145eef247bfb46b6_get_vacancies_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_operations_with_vacancies_py.html  z_145eef247bfb46b6_user_interaction_py.html
src/: DataFile.py  GetVacancies.py  OperationsWithVacancies.py  data_file.py  develop.py  get_vacancies.py  main.py  operations_with_vacancies.py  user_interaction.py
tests/: conftest.py  test_DataFile.py  test_GetVacancies.py  test_OperationsWithVacancies.py  test_data_file.py  test_get_vacancies.py  test_operations_with_vacancies.py  test_user_interaction.py
