[tool.poetry]
name = "results4"
version = "0.1.0"
description = ""
authors = ["Nurlan <nurlan.grachyov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git

  )/


)
'''

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.12.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'
#'^venv/|^tests/'

[tool.coverage.report]
exclude_also = [
     "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "import",
    "from",
    "@abstractmethod",
]